check_tests_v11.txt
warning: unused variable: `index_expr`
   --> crates\dryad_parser\src\parser.rs:171:33
    |
171 | ...                   let index_expr = self.expression()?;
    |                           ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_index_expr`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: `dryad_parser` (lib) generated 1 warning (run `cargo fix --lib -p dryad_parser` to apply 1 suggestion)
warning: unused import: `crate::native_modules::NativeModuleManager`
 --> crates\dryad_runtime\src\interpreter.rs:6:5
  |
6 | use crate::native_modules::NativeModuleManager;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Value as JsonValue`
  --> crates\dryad_runtime\src\interpreter.rs:13:24
   |
13 | use serde_json::{self, Value as JsonValue};
   |                        ^^^^^^^^^^^^^^^^^^

warning: unused imports: `Arc` and `Mutex`
  --> crates\dryad_runtime\src\interpreter.rs:14:17
   |
14 | use std::sync::{Arc, Mutex};
   |                 ^^^  ^^^^^

warning: unused import: `HeapId`
 --> crates\dryad_runtime\src\native_modules\encode_decode.rs:4:40
  |
4 | use crate::heap::{Heap, ManagedObject, HeapId};
  |                                        ^^^^^^

warning: unused import: `HeapId`
  --> crates\dryad_runtime\src\native_modules\mod.rs:24:25
   |
24 | use crate::heap::{Heap, HeapId};
   |                         ^^^^^^

warning: unused import: `std::fs`
 --> crates\dryad_runtime\src\resolver.rs:3:5
  |
3 | use std::fs;
  |     ^^^^^^^

warning: unused import: `Expr`
 --> crates\dryad_runtime\src\value.rs:1:31
  |
1 | use dryad_parser::ast::{Stmt, Expr, Visibility};
  |                               ^^^^

warning: unused import: `std::collections::HashMap`
 --> crates\dryad_runtime\src\value.rs:2:5
  |
2 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::value::Value`
 --> crates\dryad_runtime\src\debug.rs:4:5
  |
4 | use crate::value::Value;
  |     ^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::net::SocketAddr`
 --> crates\dryad_runtime\src\debug_server.rs:1:5
  |
1 | use std::net::SocketAddr;
  |     ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> crates\dryad_runtime\src\debug_server.rs:2:5
  |
2 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `AsyncReadExt`
 --> crates\dryad_runtime\src\debug_server.rs:4:17
  |
4 | use tokio::io::{AsyncReadExt, AsyncWriteExt};
  |                 ^^^^^^^^^^^^

warning: unused import: `DebugEvent`
 --> crates\dryad_runtime\src\debug_server.rs:5:52
  |
5 | ..., DebugCommand, DebugEvent};
  |                    ^^^^^^^^^^

warning: unused import: `std::collections::HashMap`
 --> crates\dryad_runtime\src\native_registry.rs:1:5
  |
1 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `NativeFunction`
 --> crates\dryad_runtime\src\native_registry.rs:2:50
  |
2 | ...oduleManager, NativeFunction};
  |                  ^^^^^^^^^^^^^^

warning: unused variable: `is_async`
   --> crates\dryad_runtime\src\interpreter.rs:573:70
    |
573 | ..., is_static, is_async, name: method_name,...
    |                 ^^^^^^^^ help: try ignoring the field: `is_async: _`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `location`
   --> crates\dryad_runtime\src\interpreter.rs:964:128
    |
964 | ... Vec<Value>, location: &SourceLocation) -...
    |                 ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_location`

warning: unused variable: `properties`
    --> crates\dryad_runtime\src\interpreter.rs:1847:62
     |
1847 | ...lass_name, properties } = heap_obj {
     |               ^^^^^^^^^^ help: try ignoring the field: `properties: _`

warning: unused variable: `properties`
    --> crates\dryad_runtime\src\interpreter.rs:1920:29
     |
1920 | ...       let properties = properties.clone();
     |               ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_properties`

warning: unused variable: `methods`
    --> crates\dryad_runtime\src\interpreter.rs:1921:29
     |
1921 | ...         let methods = methods.clone();
     |                 ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_methods`

warning: unused variable: `location`
    --> crates\dryad_runtime\src\interpreter.rs:2236:64
     |
2236 | ...&[MatchArm], location: &SourceLocation) ...
     |                 ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_location`

warning: unused variable: `id`
    --> crates\dryad_runtime\src\interpreter.rs:2387:30
     |
2387 | ...lue::Promise { id, resolved: true, value...
     |                   ^^ help: try ignoring the field: `id: _`

warning: variable does not need to be mutable
    --> crates\dryad_runtime\src\interpreter.rs:2988:21
     |
2988 | ...   let mut idx = if start_index >= 0 { 
     |           ----^^^
     |           |
     |           help: remove this `mut`
     |
     = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `buffer`
   --> crates\dryad_runtime\src\native_modules\tcp.rs:102:9
    |
102 |     let buffer = [0; 1024];
    |         ^^^^^^ help: if this is intentional, prefix it with an underscore: `_buffer`

warning: fields `method`, `path`, and `response_headers` are never read
  --> crates\dryad_runtime\src\native_modules\http_server.rs:30:5
   |
29 | struct RouteHandler {
   |        ------------ fields in this struct
30 |     method: String,
   |     ^^^^^^
31 |     path: String,
   |     ^^^^
32 |     response_body: String,
33 |     response_headers: HashMap<String, String>,
   |     ^^^^^^^^^^^^^^^^
   |
   = note: `RouteHandler` has derived impls for the traits `Debug` and `Clone`, but these are intentionally ignored during dead code analysis
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: `dryad_runtime` (lib) generated 25 warnings (run `cargo fix --lib -p dryad_runtime` to apply 24 suggestions)
warning: `dryad_runtime` (lib test) generated 25 warnings (25 duplicates)
   Compiling dryad_runtime v0.1.0 (C:\Users\Pedro Jesus\Downloads\source-main\source-main\crates\dryad_runtime)
error[E0609]: no field `constants` on type `Interpreter`
  --> crates\dryad_runtime\tests\const_runtime_tests.rs:45:38
   |
45 |     if let Some(value) = interpreter.constants.get(var_name) {
   |                                      ^^^^^^^^^ unknown field
   |
help: one of the expressions' fields has a field of the same name
   |
45 |     if let Some(value) = interpreter.env.constants.get(var_name) {
   |                                      ++++

error[E0282]: type annotations needed
  --> crates\dryad_runtime\tests\const_runtime_tests.rs:46:12
   |
46 |         Ok(value.clone())
   |            ^^^^^ cannot infer type

error[E0609]: no field `variables` on type `Interpreter`
  --> crates\dryad_runtime\tests\const_runtime_tests.rs:47:45
   |
47 |     } else if let Some(value) = interpreter.variables.get(var_name) {
   |                                             ^^^^^^^^^ unknown field
   |
help: one of the expressions' fields has a field of the same name
   |
47 |     } else if let Some(value) = interpreter.env.variables.get(var_name) {
   |                                             ++++

error[E0282]: type annotations needed
  --> crates\dryad_runtime\tests\const_runtime_tests.rs:48:12
   |
48 |         Ok(value.clone())
   |            ^^^^^ cannot infer type

Some errors have detailed explanations: E0282, E0609.
For more information about an error, try `rustc --explain E0282`.
error: could not compile `dryad_runtime` (test "const_runtime_tests") due to 4 previous errors
warning: build failed, waiting for other jobs to finish...
